force-app/main/default/objects/gnx__Delivery__c/fields/gnx__Delivery_id__c.field-meta.xml
<CustomField>
    <fullName>gnx__Delivery_id__c</fullName>
    <label>Delivery ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>