force-app/main/default/objects/gnx__Delivery__c/fields/gnx__Delivery_status__c.field-meta.xml
<CustomField>
    <fullName>gnx__Delivery_status__c</fullName>
    <description>Picklist(brouillon,active,finie,expiree,refuse)</description>
    <label>Delivery status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>done</fullName>
            </value>
            <value>
                <fullName>ongoing</fullName>
            </value>
            <value>
                <fullName>expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>